fixing alignment issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
 .light-blue-backdrop {
     background-color: #5cb3fd;
-  }
+}
+.container-align {
+  padding: 15px;
+}
